spsp tree logo scaling to screen

--- a/static/style.css
+++ b/static/style.css
@@ -16,7 +16,8 @@ body {
 }
 .SPStree{
   margin-left:10px;
-  width: 125px;
+  width: 10%;
+  height:14% width;
   float:left;
   margin-top:-3%;
 }
