--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
   <body class = "body">
     
     <div class = "topbar">
-      <image src="{{ url_for('static', filename='SPStree.png') }}" class="SPStree"></image>
+      <a href="https://busstatus.azurewebsites.net/"><image src="{{ url_for('static', filename='SPStree.png') }}" class="SPStree"></image></a>
       <a class="title">{% block bus_status_name %}{% endblock %} Bus Status</a>
     </div>
     
