bus depot phone html

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,5 +25,7 @@
     <div class="scho">
     {% block content %}{% endblock %}
     </div>
+      
+    <a class="depotphone">Springdale bus depot: (479) 750-8830</a>
   </body>
 </html>
