turning bus depot num into div

--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,9 @@
         {% block content %}{% endblock %}
     </div>
       
-    <a class="depotphone">Springdale bus depot: (479) 750-8830</a>
+    <div class="depotphone">
+      <a>Springdale bus depot: (479) 750-8830</a>
+    </div>
       
   </body>
 </html>
