depot bus num edit

--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
         {% block content %}{% endblock %}
     </div>
       
-    <div class="depotphone">
+    <div class="footer">
       <a>Springdale bus depot: (479) 750-8830</a>
     </div>
       
