bus depot footer html

--- a/templates/base.html
+++ b/templates/base.html
@@ -26,5 +26,9 @@
         {% block content %}{% endblock %}
     </div>
       
+    <div class="footer">
+      <a>Springdale bus depot: (479) 750-8830</a>
+    </div>
+      
   </body>
 </html>
