--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,11 @@
 body {
   font-family: sans-serif;
+  background-color:#172f64;
+  border-color:#170f64;
+  border-style:solid;
+  border-width:10px;
+  border-top-left-radius: 3vw;
+  margin-bottom: 10vh;
 }
 .topbar{
   margin-left:-10px;
@@ -35,15 +41,6 @@ body {
   border:none;
   background-color: #6D2723;
 }
-body{
-  background-color:#172f64;
-  border-color:#170f64;
-  border-style:solid;
-  border-width:10px;
-  border-top-left-radius: 3vw;
-  margin-bottom: 10vh;
-
-}
 .scho {
   display: flex;
   flex-flow: row wrap;
@@ -64,14 +61,16 @@ ul {
   margin: 20px 0;
 }
 .smalltext{
-  color:lightblue;
+  color:black;
+  background-color:rgb(255,215,0);
   text-decoration: none;
   font-weight: 300;
   font-size: 25px;
   font-family:Helvetica;
 }
 .smalltext:hover{
-  color:blue;
+  color:rgb(255,215,0);
+  background-color:black;
 }
 li{
   color:white;
