Icon linked correctly

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %}{% endblock %}</title>
-    <link rel='Icon' href="SPStree.png" type='image/x-icon'/>
+    <link rel='Icon' href="{{ url_for('static', filename='SPStree.png') }}" type='image/x-icon'/>
     <link href="{{ url_for('static', filename='style.css') }}" rel="stylesheet" type="text/css" />
 
     <link href='https://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet'>
