style to last updated text

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
       </div>
       <div>
         <a class="title">{% block bus_status_name %}{% endblock %} Bus Status</a>
-        <p>Last Updated: {{last_updated}}</p>
+        <p class="lastupdate">Last Updated: {{last_updated}}</p>
       </div>
     </div>
     
