Capitalizing Bus Depot

--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
     </div>
       
     <div class="footer">
-      <a>Springdale bus depot: (479) 750-8830</a>
+      <a>Springdale Bus Depot: (479) 750-8830</a>
     </div>
       
   </body>
