--- a/static/style.css
+++ b/static/style.css
@@ -10,21 +10,26 @@ body {
 .topbar{
   margin-left:-10px;
   background-color:white;
-  padding: 6% 0;
+  padding: 30px 0;
   margin-top:-10px;
   border-top-left-radius: 3vw;
   display: flex;
   flex-flow: row nowrap;
 }
+.topbar > div:last-child {
+  margin: auto 0;
+}
 .title{
   color: black;
   font-weight:1000;
-  font-size: 7vw;
+  font-size: 4rem;
   margin-left:10px;
 }
 .SPStree{
   margin-left:2vw;
   width: 10vw;
+  max-height: 187px;
+  max-width: 124px;
   height: 15vw;
   margin-top:-3%;
   transition: transform .2s;
@@ -34,7 +39,7 @@ body {
   opacity:.75
 }
 .lastupdate{
-font-size:3vw;
+font-size: 1.5rem;
 margin-left:10px;
 }
 .redbar{
