--- a/templates/base.html
+++ b/templates/base.html
@@ -22,6 +22,7 @@
       <div>
         <a class="title">{% block bus_status_name %}{% endblock %} Bus Status</a>
         <p class="lastupdate">Last Updated: {{last_updated}}</p>
+        {% block extraheader %}{% endblock %}
       </div>
     </div>
     
